[gd_scene load_steps=3 format=3 uid="uid://o2grs78qgij3"]

[ext_resource type="Script" path="res://scripts/user_interface/scmCombatBars.gd" id="1_i2y2p"]
[ext_resource type="Texture2D" uid="uid://cajqqe50ctw0n" path="res://assets/icons/armor_none.png" id="2_ugsjj"]

[node name="CombatBars" type="Node2D"]
script = ExtResource("1_i2y2p")

[node name="EnergyBar" type="ProgressBar" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = 168.0
offset_bottom = 12.0
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -168.0
offset_right = 12.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
fill_mode = 3

[node name="ArmorIcon" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -22.0
offset_right = 22.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ugsjj")

[node name="StatusEffectContainer" type="VBoxContainer" parent="."]
offset_left = -32.0
offset_top = -168.0
offset_right = -12.0
offset_bottom = -19.0
